# zaiko

./: .dockerignore  .env.production  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  bun.lockb  compose.yaml  env.example  eslint.config.js  index.html  job.nomad.hcl  openapi.json  package.json  vite.config.ts
backend/: Cargo.toml  Dockerfile  Dockerfile.backend  compose.yaml  db.sqlite  dev_setup.sh
backend/.sqlx/: query-08b03061a90ac3fd29bea8e3148b841f458fceb0799530213d566e29f7a542d0.json  query-08c3b8473941ebfd1c5e2cdcb05d400fb7c88340deb29afa6e330c351b56fbe7.json  query-0b12fd3b375cfd43658e7f2ccc664d06f1632c65a07451d7fed2d31e9c219e1e.json  query-0b925b9bed6d03dcb2fe43aa1968b55f9de7020ebbab8c40741d8ced3e1ccabf.json  query-0c5b460618c275e43f94feb9715b8b98bc038f91341becc610d1f5aafbfbf2d3.json  query-0c85255d14c3834af22857c330b2d2a870e30103a4ff24ba09e0805a7b793145.json  query-0cbf70221c39e6f918be6440582fd09651bec51d9a5e6ed38322f48b19c1dbe2.json  query-0e2617060031781b20beaa6873880c12a736b06c9ada2ec8a8187fa331f277de.json  query-0fed6c192f104d578a173f90794af1f95e8d101546523c31a760adbf0c3ede6a.json  query-118d5c341f83a4f52aa95a465548793e36d96f58a2821b63475e144f22d0992b.json  query-17592037980102cf11840b7230aac10406d4a234f7ae15d984a9b567a638a4a7.json  query-180f0a6660a1dd8436d076e2807b92ef8f8bb0abbae1f845fd3be07e9eccd904.json  query-188ddae3a9ca5de2ef6570a47c0ed849946996dde986136eb5ae2774388b437e.json  query-19c322ef6565350d80286266771cb51049c01bfcd770e7451c8f48b90715b394.json  query-1b979851c486147052b1f482507057da722d44a0a4153f449725803a0dd2f191.json  query-1c59cf86f04a4a615fc6bfd26bb3da83c86501af932380857980d8c27f756557.json  query-1d5ff32353e390927796370c8e2937baccae8418d49cba92701587bbbcddbac8.json  (+135 more)
backend/src/: auth.rs  (+15 more)
(+106 files in other folders)
