[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = { version = "4.9.0", features = ["rustls-0_23"] }
log = "0.4.22"
serde = { version = "1.0.213", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite", "chrono"] }
