[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-web = { version = "4.9.0", features = ["rustls-0_23"] }
env_logger = "0.11.6"
dotenv = "0.15.0"
log = "0.4.22"
openidconnect = "4.0.0"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "chrono"] }
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-identity = "0.8.0"
