[package]
name = "backend"
version = "2.0.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-web = { version = "4.9.0", features = ["rustls-0_23"] }
env_logger = "0.11.6"
dotenv = "0.15.0"
log = "0.4.22"
openidconnect = "4.0.0"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
derive_more = { version = "2.0.1", features = ["display"] }
jsonwebtoken = "9.3.1"
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono"] }
utoipa-actix-web = "0.1.2"
utoipa-redoc = { version = "6.0.0", features = ["actix-web"] }
actix-web-httpauth = "0.8.2"
chrono = { version = "0.4.42", features = ["serde"] }
pg_interval = "0.4.2"
